--- a/Phase3/oop_with_scikit_learn.ipynb
+++ b/Phase3/oop_with_scikit_learn.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm Wall-e and have 100% battery charged\n"
+     ]
+    }
+   ],
    "source": [
     "new_robot = GarbageBot('Wall-e')\n",
     "new_robot.speak()"
@@ -157,9 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm Wall-e and have 90% battery charged\n"
+     ]
+    }
+   ],
    "source": [
     "new_robot.speak()"
    ]
@@ -173,9 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm E-llaw and have 80% battery charged\n"
+     ]
+    }
+   ],
    "source": [
     "new_robot.change_name('E-llaw') # Note we never defined this in GarbageBot!\n",
     "new_robot.speak()"
@@ -429,7 +453,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Predictors also have a `score()` method that can be used to evaluate how well the predictor performed on a dataset (such as the test set)."
+    "Predictors also have a `score()` method that can be used to evaluate how well the predictor performed on a dataset (such as the test set).\n",
+    "\n",
+    "Default scores in Linear regression is R-squared <br>\n",
+    "logistic regression is accuracy "
    ]
   },
   {
@@ -488,11 +515,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Base Class\n"
+    "# Base Class\n",
+    "class SpecialTransformer(BaseEstimator):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpecialTransformer()"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_spec_tran = SpecialTransformer()\n",
+    "my_spec_tran"
    ]
   },
   {
@@ -511,27 +561,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fit\n"
+    "# fit\n",
+    "class SpecialTransformer(BaseEstimator):\n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        self.max_ = np.max(X, axis=0)\n",
+    "        \n",
+    "        return self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instantiate\n"
+    "# instantiate\n",
+    "my_spec_tran = SpecialTransformer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  -4,  400,   40],\n",
+       "       [  10, -100,    1],\n",
+       "       [   6, -800,  700],\n",
+       "       [   2,    0,  400],\n",
+       "       [   8,  200, 1000]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Let's use some test data\n",
     "# Note each column is a feature, each row a data point\n",
@@ -555,20 +627,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SpecialTransformer' object has no attribute 'max_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-a5b93a133e47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# check .max_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmy_spec_tran\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SpecialTransformer' object has no attribute 'max_'"
+     ]
+    }
+   ],
    "source": [
-    "# check .max_\n"
+    "# check .max_\n",
+    "my_spec_tran.max_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  10,  400, 1000])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# No transformation yet, but finds the maximum values, fit and check\n"
+    "# No transformation yet, but finds the maximum values, fit and check\n",
+    "my_spec_tran.fit(X)\n",
+    "my_spec_tran.max_"
    ]
   },
   {
@@ -594,18 +692,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add transform\n"
+    "# add transform\n",
+    "class SpecialTransformer(BaseEstimator):\n",
+    "    \n",
+    "    def fit(self, X, y=None):\n",
+    "        self.max_ = np.max(X, axis=0)\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        X_copy = np.copy(X)\n",
+    "        X_copy[X_copy < 0] = 0\n",
+    "        return X_copy / self.max_ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  -4,  400,   40],\n",
+       "       [  10, -100,    1],\n",
+       "       [   6, -800,  700],\n",
+       "       [   2,    0,  400],\n",
+       "       [   8,  200, 1000]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Recall the data\n",
     "X"
@@ -613,20 +736,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a SpecialTransformer and fit with the data\n"
+    "my_spec_tran = SpecialTransformer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transform the data\n"
+    "# Create a SpecialTransformer and fit with the data\n",
+    "X_new = my_spec_tran.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpecialTransformer()"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform the data\n",
+    "X_new = my_spec_tran.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.   , 1.   , 0.04 ],\n",
+       "       [1.   , 0.   , 0.001],\n",
+       "       [0.6  , 0.   , 0.7  ],\n",
+       "       [0.2  , 0.   , 0.4  ],\n",
+       "       [0.8  , 0.5  , 1.   ]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_new"
    ]
   },
   {
@@ -716,13 +894,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  -4,  400,   40,   10, -100,    1,    6, -800,  700,    2,    0,\n",
+       "        400,    8,  200, 1000])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "## YOUR CODE HERE!\n",
     "class MyStandardScaler:\n",
-    "    pass"
+    "    def fit(self, X, y=None):\n",
+    "        self.mean_ = np.mean(X, axis=0)\n",
+    "        self.std_ = np.std(X, axis=0)\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X):\n",
+    "        X_copy = np.copy(X)\n",
+    "        return (X_copy -self.mean_) / self.std_\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_stand_tran = MyStandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input(\"what is your name: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  -4,  400,   40],\n",
+       "       [  10, -100,    1],\n",
+       "       [   6, -800,  700],\n",
+       "       [   2,    0,  400],\n",
+       "       [   8,  200, 1000]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.MyStandardScaler at 0x7f89a3a8ac10>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_stand_tran.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.69222822,  1.12766778, -1.01262497],\n",
+       "       [ 1.12815215, -0.09805807, -1.114357  ],\n",
+       "       [ 0.32232919, -1.81407425,  0.70899399],\n",
+       "       [-0.48349378,  0.1470871 , -0.07356008],\n",
+       "       [ 0.72524067,  0.63737744,  1.49154806]])"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_stand_tran.transform(X)"
    ]
   },
   {
@@ -742,29 +1037,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Test Your Code!"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Once you have it, you can test it against the data below and Scikit-Learn's `StandardScaler`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  -4,  400,   40],\n",
+       "       [  10, -100,    1],\n",
+       "       [   6, -800,  700],\n",
+       "       [   2,    0,  400],\n",
+       "       [   8,  200, 1000]])"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your test data\n",
     "X = np.array([\n",
@@ -779,11 +1083,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.69222822,  1.12766778, -1.01262497],\n",
+       "       [ 1.12815215, -0.09805807, -1.114357  ],\n",
+       "       [ 0.32232919, -1.81407425,  0.70899399],\n",
+       "       [-0.48349378,  0.1470871 , -0.07356008],\n",
+       "       [ 0.72524067,  0.63737744,  1.49154806]])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test against StandardScaler\n",
     "sklearn_scaler = StandardScaler()\n",
@@ -793,11 +1110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "StandardScaler and MyStandardScaler same?\n",
+      "[[ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]\n",
+      " [ True  True  True]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Catches errors\n",
     "try:\n",
